--- a/mainStyle.css
+++ b/mainStyle.css
@@ -103,7 +103,7 @@
     align-items: center;
     width: 100%;
     height: 400px;
-    background: url("2.jpg")no-repeat;;
+    background: url("2.jpg")no-repeat;
     display: inline-block;
 }
 
@@ -113,6 +113,24 @@
     height: 400px;
     background: url("1.jpg");
     display: inline-block;
+}
+
+.gauss {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 300px;
+    background: url("3.jpg")no-repeat;
+}
+
+.gauss:hover {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    height: 300px;
+    background: url("4.png")no-repeat;
 }
 
 .externalLinks > a{
