--- a/mainStyle.css
+++ b/mainStyle.css
@@ -6,7 +6,7 @@
 
 .flex-container > div {
     background-color: #FFFF66;
-    border-style: dashed;
+    border-style: dot-dot-dash;
     width: 326px;
     margin: 10px;
     text-align: center;
@@ -99,7 +99,7 @@
 
 .img {
     border-color: #FFFF66;
-    border-style: dashed;
+    border-style: dot-dot-dash;
     align-items: center;
     width: 100%;
     height: 400px;
