--- a/mainStyle.css
+++ b/mainStyle.css
@@ -7,7 +7,7 @@
 .flex-container > div {
     background-color: #FFFF66;
     border-style: dot-dot-dash;
-    width: 326px;
+    width: 260px;
     margin: 10px;
     text-align: center;
     line-height: 60px;
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: row;
     float: right;
-    overflow-y: auto;
+    overflow-y: visible;
     max-height: 740px;
 
 }
@@ -54,7 +54,7 @@
 }
 
 .text {
-    text-align: justify;
+    text-align: justify-all;
     margin-left: 3%;
     margin-right: 3%;
     color: blue;
