--- a/mainStyle.css
+++ b/mainStyle.css
@@ -114,19 +114,19 @@
 }
 
 .gauss {
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
     width: 100%;
-    height: 300px;
+    height: 320px;
     background: url("3.jpg")no-repeat;
+    background-position: center;
 }
 
 .gauss:hover {
-    display: block;
-    width: 40%;
-    height: 300px;
-    background: url("4.png");
+    background: url("4.png")no-repeat;
+    background-position: center;
+    display: flex;
+    width: 100%;
+    height: 320px;
 }
 
 .externalLinks > a{
