--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ html, body {
 }
 .row > .text{
 
-    font-size: medium;
+    font-size: 16px;
     color:darkblue;
     font-weight: bold;
     align-items: center;
