New features have been added. Bugs are fixed.

--- a/styles.css
+++ b/styles.css
@@ -130,9 +130,11 @@ html, body {
 .searchBox{
     display: flex;
     flex: 1;
+
 }
 .searchBox > input{
     width: 100%;
     text-align: center;
+    border-radius: 15px;
 
 }
